--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container">
+  <h1>Fiit DataViz</h1>
+  <%= form_tag('/git-select') do %>
+    <%= label_tag(:repo, "Git Repo:") %>
+    <%= text_field_tag(:repo, 'https://github.com/octokit/') %>
+    <%= submit_tag("Show Me") %>
+  <% end %>
+</div>
