--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,14 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/three.js/three.min.js"></script>
+  <script src="js/lib/three-text2d.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/lib/FIIT_DV/treeViz.js"></script>
+  <script src="js/lib/FIIT_DV/nodes/fileNode.js"></script>
+  <script src="js/lib/FIIT_DV/nodes/folderNode.js"></script>
+  <script src="js/lib/FIIT_DV/core/timer.js"></script>
+  <script src="js/lib/FIIT_DV/core/renderer.js"></script>
+  <script src="js/lib/FIIT_DV/core/tree.js"></script>
 </head>
 <body>
 
