--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+html,body {width: 100%; height: 100%; margin:0; padding: 0;}
+
+#web-gl-canvas {width: 100%; height: 100%; margin:0; padding: 0;}
+
+#web-gl-canvas canvas{ margin:0; padding:0 }
