Changes to child size computation

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Fiit DataViz</h1>
   <%= form_tag('/git-select') do %>
     <%= label_tag(:repo, "Git Repo:") %>
-    <%= text_field_tag(:repo, 'https://github.com/octokit/') %>
+    <%= text_field_tag(:repo, 'https://github.com/zx-/fesi-otravovac') %>
     <%= submit_tag("Show Me") %>
   <% end %>
 </div>
