Adds colours to files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/three.js/three.min.js"></script>
   <script src="js/lib/three-text2d.min.js"></script>
+  <script src="js/lib/controls.js"></script>
+
   <script src="js/main.js"></script>
   <script src="js/lib/FIIT_DV/treeViz.js"></script>
   <script src="js/lib/FIIT_DV/nodes/fileNode.js"></script>
