Reworks colors and adds click events

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
   <script src="js/lib/FIIT_DV/core/timer.js"></script>
   <script src="js/lib/FIIT_DV/core/renderer.js"></script>
   <script src="js/lib/FIIT_DV/core/tree.js"></script>
+  <script src="js/lib/FIIT_DV/loggers/MouseClickLogger.js"></script>
 </head>
 <body>
 
