Adds show file functionality

--- a/app/views/home/git_select.erb
+++ b/app/views/home/git_select.erb
@@ -2,6 +2,7 @@
 
 <script>
     var data = <%= raw @json_data %>;
+    var REPOSITORY = <%= raw @repo.to_json %>;
     $( document ).ready(function() {
       new FIIT_DV.TreeViz(data);
     });
