--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,8 @@
 
 html,body {width: 100%; height: 100%; margin:0; padding: 0;}
 
-#web-gl-canvas {width: 100%; height: 100%; margin:0; padding: 0;}
+div { z-index : 0; }
+
+#web-gl-canvas {width: 100%; height: 100%; margin:0; padding: 0; position:absolute; overflow: hidden; z-index: 5000}
 
 #web-gl-canvas canvas{ margin:0; padding:0 }
