--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/three.js/three.min.js"></script>
   <script src="js/lib/three-text2d.min.js"></script>
+  <script src='bower_components/threex.htmlmixer/examples/vendor/three.js/examples/js/renderers/CSS3DRenderer.js'></script>
+  <script src='bower_components/threex.htmlmixer/examples/vendor/three.js/examples/js/controls/TrackballControls.js'></script>
+  <script src='bower_components/threex.htmlmixer/threex.htmlmixer.js'></script>
+  <script src='bower_components/threex.htmlmixer/threex.htmlmixerhelpers.js'></script>
+  <script src='bower_components/threex.htmlmixer/threex.htmlmultiplemixer.js'></script>
+
   <script src="js/lib/controls.js"></script>
 
   <script src="js/main.js"></script>
@@ -20,6 +26,7 @@
   <script src="js/lib/FIIT_DV/core/renderer.js"></script>
   <script src="js/lib/FIIT_DV/core/tree.js"></script>
   <script src="js/lib/FIIT_DV/loggers/MouseClickLogger.js"></script>
+  <script src="js/lib/FIIT_DV/core/selector.js"></script>
 </head>
 <body>
 
