--- a/app/views/home/show_file.erb
+++ b/app/views/home/show_file.erb
@@ -1,4 +1,5 @@
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-<pre class="prettyprint" style="background-color: white;">
+<h1><%= @path %></h1>
+<pre class="prettyprint" style="background: white;">
   <%= @file %>
 </pre>
