--- a/app/views/home/git_select.erb
+++ b/app/views/home/git_select.erb
@@ -1,3 +1,11 @@
+<div id="menu">
+  <h3>Menu:</h3>
+  <p>
+    filter: <input type="text" id="name-filter">
+    <button id="redraw-button">Redraw</button>
+  </p>
+</div>
+
 <div id="web-gl-canvas"></div>
 
 <script>
