--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,26 @@
 html,body {width: 100%; height: 100%; margin:0; padding: 0;}
 
 div { z-index : 0; }
+#menu {
+    z-index: 6000;
+    width: 220px;
+    height: 300px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 15px;
+    border: 1px solid black;
+    padding: 10px;
+}
 
-#web-gl-canvas {width: 100%; height: 100%; margin:0; padding: 0; position:absolute; overflow: hidden; z-index: 5000}
+#web-gl-canvas {
+    width: 100%;
+    height: 100%;
+    margin:0;
+    padding: 0;
+    position:absolute;
+    overflow: hidden;
+    z-index: 5000;
+}
 
 #web-gl-canvas canvas{ margin:0; padding:0 }
