--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,14 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <base href="/" target="_blank">
+  <base href="/" >
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/three.js/three.min.js"></script>
   <script src="js/lib/three-text2d.min.js"></script>
   <script src='bower_components/threex.htmlmixer/examples/vendor/three.js/examples/js/renderers/CSS3DRenderer.js'></script>
-  <script src='bower_components/threex.htmlmixer/examples/vendor/three.js/examples/js/controls/TrackballControls.js'></script>
+  <script src='js/lib/TrackballControls.js'></script>
   <script src='bower_components/threex.htmlmixer/threex.htmlmixer.js'></script>
   <script src='bower_components/threex.htmlmixer/threex.htmlmixerhelpers.js'></script>
   <script src='bower_components/threex.htmlmixer/threex.htmlmultiplemixer.js'></script>
