--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,13 +20,13 @@ div { z-index : 0; }
 #menu {
     z-index: 6000;
     width: 220px;
-    height: 300px;
     position: absolute;
     top: 10px;
     right: 10px;
     border-radius: 15px;
     border: 1px solid black;
     padding: 10px;
+    background-color: rgba(255,255,255, .7);
 }
 
 #web-gl-canvas {
@@ -40,3 +40,7 @@ div { z-index : 0; }
 }
 
 #web-gl-canvas canvas{ margin:0; padding:0 }
+
+.stvorcek { width: 20px; height: 10px; display: inline-block; border: 1px solid darkgray; margin-right: 6px;}
+
+#legend ul {list-style-type: none;}
