--- a/app/views/home/git_select.erb
+++ b/app/views/home/git_select.erb
@@ -1,9 +1,13 @@
 <div id="menu">
   <h3>Menu:</h3>
   <p>
-    filter: <input type="text" id="name-filter">
+    find: <input type="text" id="name-filter">
     <button id="redraw-button">Redraw</button>
+    <button id="filter-button">Filter</button>
   </p>
+  <div id="legend">
+
+  </div>
 </div>
 
 <div id="web-gl-canvas"></div>
